css/main.css
/* ... */
.message-body blockquote {
    border-left-width: 4px;
    border-left-color: var(--border-color-primary);
}

.message-body h1,
.message-body h2,
.message-body h3,
.message-body h4,
.message-body h5,
.message-body h6 {
    color: #1a1a1a;
}

.message-body h1 {
    font-weight: 700;
    font-size: 2.25em;
    margin-top: 0;
    margin-bottom: 0.8888889em;
    line-height: 1.1111111;
}

.message-body h2 {
    font-weight: 700;
    font-size: 1.5em;
    margin-top: 2em;
    margin-bottom: 1em;
    line-height: 1.3333333;
}

.message-body h3 {
    font-weight: 600;
    font-size: 1.25em;
    margin-top: 1.6em;
    margin-bottom: 0.6em;
    line-height: 1.6;
}

.message-body h4 {
    font-weight: 600;
    font-size: 1em;
    margin-top: 1.5em;
    margin-bottom: 0.5em;
    line-height: 1.5;
}

.message-body h5 {
    font-weight: 600;
    font-size: 1em;
    margin: 0;
}

.message-body h6 {
    font-weight: 600;
    font-size: 1em;
    margin: 0;
}

.dark .message q {
    color: #f5b031;
}

.message q {
    color: #3480be;
}

.message-body q::before, .message-body q::after {
    content: "";
}

.message-body li {
    list-style-position: outside;
    margin-top: 0.5em !important;
    margin-bottom: 0.5em !important;
}

.message-body ul.long-list > li,
.message-body ol.long-list > li {
    margin-top: 1.25em !important;
    margin-bottom: 1.25em !important;
}

.message-body a {
    font-weight: 500;
}

.chat .message-body ul, .chat .message-body ol {
    padding-inline-start: 2em;
}

.message-body li > p {
    display: inline !important;
}

.message-body ul {
    list-style-type: disc !important;
}

.message-body pre:not(:last-child) {
    margin-bottom: 35.625px !important;
}

.message-body pre:last-child {
    margin-bottom: 0 !important;
}

#default-tab .prose pre, #notebook-tab .prose pre {
    overflow: scroll;
}

.prose ul ul {
    margin: 0;
}

.message-body pre > code {
    white-space: pre !important;
    overflow-x: auto !important;
    max-width: calc(100dvw - 39px);
    border: 1px solid #666;
    border-radius: 5px;
    font-size: 82%;
    padding: 1px 3px;
    background: #f3f4f6 !important;
    color: #1f2328;
}

.dark .message-body pre > code {
    background: #0d1117 !important;
    color: rgb(201 209 217);
}

.message-body pre > code {
    display: block;
    padding: 15px;
}

.message-body :not(pre) > code {
    white-space: normal !important;
    font-weight: bold;
    font-size: 0.95em;
    font-family: Menlo,"Roboto Mono","Courier New",Courier,monospace,Inter,sans-serif;
    padding: .15rem .3rem;
    background-color: #ececec;
}

.dark .message-body :not(pre) > code {
    background-color: rgb(255 255 255 / 10%);
}

#chat-input {
    padding: 0;
    background: transparent;
    border: none;
}

#chat-input textarea {
    background: #f3f4f6;
    padding: 0.675rem 2.5rem 0.6rem;
    margin-top: 0.15rem;
    border: 1px solid var(--border-color-primary);
    border-radius: 1.5rem;
    overflow-y: auto !important;
}

#chat-input textarea::-webkit-scrollbar {
    width: 7px;
}

#chat-input textarea::-webkit-scrollbar-track {
    background: transparent;
}

#chat-input textarea::-webkit-scrollbar-thumb {
    background: var(--neutral-300);
    border-radius: 9999px;
}

.dark #chat-input textarea::-webkit-scrollbar-thumb {
    background: rgb(255 255 255 / 6.25%);
}

#chat-input textarea::placeholder {
    white-space: nowrap;
    overflow: hidden;
}

#chat-input textarea:focus {
    box-shadow: none !important;
}

#chat-input > :first-child {
    background-color: transparent;
}

#chat-input .progress-text {
    display: none;
}

#chat-input .submit-button {
    display: none;
}

#chat-input .upload-button {
    margin-right: 16px;
    margin-bottom: 7px;
    background: transparent;
}

#chat-input .thumbnails {
    padding-top: 3px;
}

.chat-input-positioned {
    max-width: 54rem;
    left: 50%;
    transform: translateX(-50%);
    position: absolute;
    bottom: 0;
    background: var(--body-background-fill);
}

@media print {
    body {
        visibility: hidden;
    }

    .chat {
        visibility: visible;
        position: absolute;
        left: 0;
        top: 0;
        max-width: unset;
        max-height: unset;
        width: 100%;
        overflow-y: visible;
    }

    .message {
        break-inside: avoid;
    }

    .gradio-container {
        overflow: visible;
    }

    .tab-nav {
        display: none !important;
    }

    #chat-tab > :first-child {
        max-width: unset;
    }
}

#typing-container {
    display: none;
    position: absolute;
    background-color: transparent;
    left: 23px;
    top: -25px;
    padding: var(--block-padding);
}

.typing {
    position: relative;
}

.visible-dots #typing-container {
    display: block;
}

.typing span {
    content: '';
    animation: blink 1.5s infinite;
    animation-fill-mode: both;
    height: 10px;
    width: 10px;
    background: #3b5998;;
    position: absolute;
    left:0;
    top:0;
    border-radius: 50%;
}

.typing .dot1 {
    animation-delay: .2s;
    margin-left: calc(10px * 1.5);
}

.typing .dot2 {
    animation-delay: .4s;
    margin-left: calc(10px * 3);
}

@keyframes blink {
    0% {
        opacity: .1;
    }

    20% {
        opacity: 1;
    }

    100% {
        opacity: .1;
    }
}

#chat-tab .generating {
    display: none !important;
}

.hover-element {
    position: relative;
    padding-top: 4px;
}

#hover-element-button {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 32px;
    height: 32px;
    border-radius: 0.5rem;
    cursor: pointer;
    color: gray;
}

#hover-element-button:hover {
    background-color: var(--background-fill-secondary);
}

#hover-element-button svg {
    color: inherit;
}

.dark #hover-element-button:hover {
    background-color: var(--selected-item-color-dark);
}
/* ... */

